[package]
name = "bevy_crossterm"
version = "0.4.0"
authors = ["Chris Yealy <christopherjyealy@gmail.com>"]
description = "Develop terminal games with crossterm and Bevy"
repository = "https://github.com/octotep/bevy_crossterm/"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { version = "0.4", default-features = false }
bitflags = "1.2"
crossterm = { version = "0.18", features = ["serde"] }
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.7"
broccoli = "0.20"

[dev-dependencies]
bevy = { version = "0.4", default-features = false }
ron = "0.6"
textwrap = "0.13.1"

[[example]]
name = "window"
